--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8">
-		<title>Esteban ProjectoLW</title>
+		<title>Esteban Diaczun</title>
 		<!-- Change these Google fonts with your own choice -->
 		<link href="https://fonts.googleapis.com/css?family=Chivo:700|Overpass:400,700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
@@ -11,7 +11,7 @@
 ​      <div class="banner">
 	     <h1>BAR EL CHOP</h1>
 	     <p>El mejor bar del mundo</p>
-	     <a href="https://www.lewagon.com/es" target="_blank" class="btn-blue">DESCUBRENOS</a>
+	     <a href="https://www.instagram.com/estebannixolas" target="_blank" class="btn-blue">DESCUBRENOS</a>
 	  </div>
 ​
 	  <!-- Cards section -->
@@ -20,6 +20,7 @@
 
 
 <div class="cards">
+
 
         <div class="card white">
 			<img src="proto1.jpg" alt="">
